# Counters-their-difference-and-collective-anomalies

./: README.md  not_plugin.py  point_writer.py
offline_analysis/: collective.py
offline_analysis/data/: rates_anomaly.csv  rates_anomaly_25.csv  rates_regular.csv
poller/: Cargo.toml
poller/src/: config.rs  errors.rs  http_load.rs  main.rs  telemetry.rs
